@@ -16,20 +16,36 @@
     <line id="12" name="Бутовская линия" color="lightgrey"/>
   </lines>
   <stations>
+    <!-- Stations on multiple lines -->
+    <station id="1-06" name="Комсомольская" line="1:6,5:7" link="1-05,1-07,3-08,5-06"/>
+    <station id="1-13" name="Парк культуры" line="1:13,5:13" link="1-12,1-14,3-12,5-12"/>
+    <station id="2-07" name="Белорусская" line="2:7,5:3" link="2-06,2-08,5-02,5-04"/>
+    <station id="2-12" name="Павелецкая" line="2:12,5:10" link="2-11,2-13,5-09,5-11"/>
+    <station id="2-15" name="Каширская" line="2:15,11:1" link="2-14,2-16,11-02"/>
+    <station id="3-08" name="Курская" line="3:8,5:8" link="1-06,3-07,3-09,5-09,10-05"/>
+    <station id="3-12" name="Киевская" line="3:12,4:10,5:1" link="1-13,3-11,3-13,4-07,4-09,4-11,5-02"/>
+    <station id="3-13" name="Парк Победы" line="3:13,8:10" link="3-12,3-14,8-09"/>
+    <station id="3-15" name="Кунцевская" line="3:15,4:1" link="3-14,3-16,4-02"/>
+    <station id="5-06" name="Проспект Мира" line="5:6,6:8" link="1-06,5-04,6-07,6-09"/>
+    <station id="5-09" name="Таганская" line="5:9,7:14" link="3-08,5-11,6-11,7-15,8-07"/>
+    <station id="5-12" name="Октябрьская" line="5:12,6:13" link="1-13,5-11,6-12,6-14"/>
+    <station id="6-11" name="Китай-город" line="6:11,7:13" link="5-09,6-10,6-12,7-12"/>
+    <station id="6-12" name="Третьяковская" line="6:12" link="2-11,6-11,5-12,8-07,8-09"/>
+
     <!-- https://ru.wikipedia.org/wiki/Сокольническая_линия -->
     <station id="1-01" name="Бульвар Рокоссовского" line="1:1" link="1-02"/>
     <station id="1-02" name="Черкизовская" line="1:2" link="1-01,1-03"/>
     <station id="1-03" name="Преображенская площадь" line="1:3" link="1-02,1-04"/>
     <station id="1-04" name="Сокольники" line="1:4" link="1-03,1-05"/>
     <station id="1-05" name="Красносельская" line="1:5" link="1-04,1-06"/>
-    <station id="1-06" name="Комсомольская" line="1:6" link="1-05,1-07,5-07"/>
+    <!-- Комсомольская -->
     <station id="1-07" name="Красные ворота" line="1:7" link="1-06,1-08"/>
     <station id="1-08" name="Чистые пруды" line="1:8" link="1-07,1-09,6-10,10-04"/>
     <station id="1-09" name="Лубянка" line="1:9" link="1-08,1-10,7-12"/>
     <station id="1-10" name="Охотный ряд" line="1:10" link="1-09,1-11,2-10,3-09"/>
     <station id="1-11" name="Библиотека имени Ленина" line="1:11" link="1-10,1-12,3-10,4-13,9-12"/>
     <station id="1-12" name="Кропоткинская" line="1:12" link="1-11,1-13"/>
-    <station id="1-13" name="Парк культуры" line="1:13" link="1-12,1-14,5-13"/>
+    <!-- Парк культуры -->
     <station id="1-14" name="Фрунзенская" line="1:14" link="1-13,1-15"/>
     <station id="1-15" name="Спортивная" line="1:15" link="1-14,1-16"/>
     <station id="1-16" name="Воробьёвы горы" line="1:16" link="1-15,1-17"/>
@@ -44,15 +60,15 @@
     <station id="2-04" name="Сокол" line="2:4" link="2-03,2-05"/>
     <station id="2-05" name="Аэропорт" line="2:5" link="2-04,2-06"/>
     <station id="2-06" name="Динамо" line="2:6" link="2-05,2-07"/>
-    <station id="2-07" name="Белорусская" line="2:7" link="2-06,2-08,5-03"/>
+    <!-- Белорусская -->
     <station id="2-08" name="Маяковская" line="2:8" link="2-07,2-09"/>
     <station id="2-09" name="Тверская" line="2:9" link="2-08,2-10,7-11,9-11"/>
     <station id="2-10" name="Театральная" line="2:10" link="1-10,2-09,2-11,3-09"/>
-    <station id="2-11" name="Новокузнецкая" line="2:11" link="2-10,2-12,6-12,8-08"/>
-    <station id="2-12" name="Павелецкая" line="2:12" link="2-11,2-13,5-10"/>
+    <station id="2-11" name="Новокузнецкая" line="2:11" link="2-10,2-12,6-12"/>
+    <!-- Павелецкая -->
     <station id="2-13" name="Автозаводская" line="2:13" link="2-12,2-14"/>
     <station id="2-14" name="Коломенская" line="2:14" link="2-13,2-15"/>
-    <station id="2-15" name="Каширская" line="2:15" link="2-14,2-16,11-01"/>
+    <!-- Каширская -->
     <station id="2-16" name="Кантемировская" line="2:16" link="2-15,2-17"/>
     <station id="2-17" name="Царицыно" line="2:17" link="2-16,2-18"/>
     <station id="2-18" name="Орехово" line="2:18" link="2-17,2-19"/>
@@ -68,14 +84,14 @@
     <station id="3-05" name="Семёновская" line="3:5" link="3-04,3-06"/>
     <station id="3-06" name="Электрозаводская" line="3:6" link="3-05,3-07"/>
     <station id="3-07" name="Бауманская" line="3:7" link="3-06,3-08"/>
-    <station id="3-08" name="Курская" line="3:8" link="1-06,3-07,3-09,5-08,10-05"/>
+    <!-- Курская -->
     <station id="3-09" name="Площадь Революции" line="3:9" link="1-10,2-10,3-08,3-10"/>
     <station id="3-10" name="Арбатская1" line="3:10" link="1-11,3-09,3-11,4-13,9-12"/>
     <station id="3-11" name="Смоленская1" line="3:11" link="3-10,3-12"/>
-    <station id="3-12" name="Киевская" line="3:12" link="3-11,3-13,4-10,5-01"/>
-    <station id="3-13" name="Парк Победы" line="3:13" link="3-12,3-14,8-10"/>
+    <!-- Киевская -->
+    <!-- Парк Победы -->
     <station id="3-14" name="Славянский бульвар" line="3:14" link="3-13,3-15"/>
-    <station id="3-15" name="Кунцевская" line="3:15" link="3-14,3-16,4-01"/>
+    <!-- Кунцевская -->
     <station id="3-16" name="Молодёжная" line="3:16" link="3-15,3-17"/>
     <station id="3-17" name="Крылатское" line="3:17" link="3-16,3-18"/>
     <station id="3-18" name="Строгино" line="3:18" link="3-17,3-19"/>
@@ -85,34 +101,34 @@
     <station id="3-22" name="Пятницкое шоссе" line="3:22" link="3-21"/>
 
     <!-- https://ru.wikipedia.org/wiki/Филёвская_линия -->
-    <station id="4-01" name="Кунцевская" line="4:1" link="3-15,4-02"/>
-    <station id="4-02" name="Пионерская" line="4:2" link="4-01,4-03"/>
+    <!-- Кунцевская -->
+    <station id="4-02" name="Пионерская" line="4:2" link="3-15,4-03"/>
     <station id="4-03" name="Филёвский парк" line="4:3" link="4-02,4-04"/>
     <station id="4-04" name="Багратионовская" line="4:4" link="4-03,4-05"/>
     <station id="4-05" name="Фили" line="4:5" link="4-04,4-06"/>
     <station id="4-06" name="Кутузовская" line="4:6" link="4-05,4-07"/>
-    <station id="4-07" name="Студенческая" line="4:7" link="4-06,4-10"/>
+    <station id="4-07" name="Студенческая" line="4:7" link="4-06,3-12"/>
     <station id="4-08" name="Международная" line="4:8" link="4-09"/>
-    <station id="4-09" name="Выставочная" line="4:9" link="4-08,4-10,8-09"/>
-    <station id="4-10" name="Киевская" line="4:10" link="3-12,4-07,4-09,4-11,5-01"/>
-    <station id="4-11" name="Смоленская2" line="4:11" link="4-10,4-12"/>
+    <station id="4-09" name="Выставочная" line="4:9" link="4-08,3-12,8-09"/>
+    <!-- Киевская -->
+    <station id="4-11" name="Смоленская2" line="4:11" link="3-12,4-12"/>
     <station id="4-12" name="Арбатская2" line="4:12" link="4-11,4-13"/>
     <station id="4-13" name="Александровский сад" line="4:13" link="1-11,3-10,4-12"/>
 
     <!-- https://ru.wikipedia.org/wiki/Кольцевая_линия_(Москва) -->
-    <station id="5-01" name="Киевская" line="5:1" link="3-12,4-10,5-02,5-13"/>
-    <station id="5-02" name="Краснопресненская" line="5:2" link="5-01,5-03,7-10"/>
-    <station id="5-03" name="Белорусская" line="5:3" link="2-07,5-02,5-04"/>
-    <station id="5-04" name="Новослободская" line="5:4" link="5-03,5-06,6-08,9-09"/>
+    <!-- Киевская -->
+    <station id="5-02" name="Краснопресненская" line="5:2" link="3-12,2-07,7-10"/>
+    <!-- Белорусская -->
+    <station id="5-04" name="Новослободская" line="5:4" link="2-07,5-06,9-09"/>
     <!-- <station id="5-05" name="Суворовская" line="5:5" link=""/> -->
-    <station id="5-06" name="Проспект Мира" line="5:6" link="5-04,5-07,6-08"/>
-    <station id="5-07" name="Комсомольская" line="5:7" link="1-06,5-06,5-08"/>
-    <station id="5-08" name="Курская" line="5:8" link="1-06,3-08,5-07,5-09,10-05"/>
-    <station id="5-09" name="Таганская" line="5:9" link="5-08,5-11,7-14,8-07"/>
-    <station id="5-10" name="Павелецкая" line="5:10" link="2-12,5-09,5-11"/>
-    <station id="5-11" name="Добрынинская" line="5:11" link="5-10,5-12,9-14"/>
-    <station id="5-12" name="Октябрьская" line="5:12" link="5-11,5-13,6-13"/>
-    <station id="5-13" name="Парк культуры" line="5:13" link="1-13,5-01,5-12"/>
+    <!-- Проспект Мира -->
+    <!-- Комсомольская -->
+    <!-- Курская -->
+    <!-- Таганская -->
+    <!-- Павелецкая -->
+    <station id="5-11" name="Добрынинская" line="5:11" link="2-12,5-12,9-14"/>
+    <!-- Октябрьская -->
+    <!-- Парк культуры -->
 
     <!-- https://ru.wikipedia.org/wiki/Калужско-Рижская_линия -->
     <station id="6-01" name="Медведково" line="6:1" link="6-02"/>
@@ -121,14 +137,14 @@
     <station id="6-04" name="Ботанический сад" line="6:4" link="6-03,6-05"/>
     <station id="6-05" name="ВДНХ" line="6:5" link="6-04,6-06"/>
     <station id="6-06" name="Алексеевская" line="6:6" link="6-05,6-07"/>
-    <station id="6-07" name="Рижская" line="6:7" link="6-06,6-08"/>
-    <station id="6-08" name="Проспект Мира" line="6:8" link="1-06,5-04,6-07,6-09"/>
-    <station id="6-09" name="Сухаревская" line="6:9" link="6-08,6-10"/>
+    <station id="6-07" name="Рижская" line="6:7" link="6-06,5-06"/>
+    <!-- Проспект Мира -->
+    <station id="6-09" name="Сухаревская" line="6:9" link="5-06,6-10"/>
     <station id="6-10" name="Тургеневская" line="6:10" link="1-08,6-09,6-11,10-04"/>
-    <station id="6-11" name="Китай-город" line="6:11" link="6-10,6-12,7-13"/>
-    <station id="6-12" name="Третьяковская" line="6:12" link="6-11,6-13,8-08,2-11"/>
-    <station id="6-13" name="Октябрьская" line="6:13" link="5-12,6-12,6-14"/>
-    <station id="6-14" name="Шаболовская" line="6:14" link="6-13,6-15"/>
+    <!-- Китай-город -->
+    <!-- Третьяковская -->
+    <!-- Октябрьская -->
+    <station id="6-14" name="Шаболовская" line="6:14" link="5-12,6-15"/>
     <station id="6-15" name="Ленинский проспект" line="6:15" link="6-14,6-16"/>
     <station id="6-16" name="Академическая" line="6:16" link="6-15,6-17"/>
     <station id="6-17" name="Профсоюзная" line="6:17" link="6-16,6-18"/>
@@ -152,10 +168,10 @@
     <station id="7-09" name="Улица 1905 года" line="7:9" link="7-08,7-10"/>
     <station id="7-10" name="Баррикадная" line="7:10" link="7-09,7-11,5-02"/>
     <station id="7-11" name="Пушкинская" line="7:11" link="2-09,7-10,7-12,9-11"/>
-    <station id="7-12" name="Кузнецкий мост" line="7:12" link="1-09,7-11,7-13"/>
-    <station id="7-13" name="Китай-город" line="7:13" link="6-11,7-12,7-14"/>
-    <station id="7-14" name="Таганская" line="7:14" link="5-09,7-13,7-15,8-07"/>
-    <station id="7-15" name="Пролетарская" line="7:15" link="7-14,7-16,10-07"/>
+    <station id="7-12" name="Кузнецкий мост" line="7:12" link="1-09,7-11,6-11"/>
+    <!-- Китай-город -->
+    <!-- Таганская -->
+    <station id="7-15" name="Пролетарская" line="7:15" link="5-09,7-16,10-07"/>
     <station id="7-16" name="Волгоградский проспект" line="7:16" link="7-15,7-17"/>
     <station id="7-17" name="Текстильщики" line="7:17" link="7-16,7-18"/>
     <station id="7-18" name="Кузьминки" line="7:18" link="7-17,7-19"/>
@@ -171,10 +187,10 @@
     <station id="8-04" name="Шоссе Энтузиастов" line="8:4" link="8-03,8-05"/>
     <station id="8-05" name="Авиамоторная" line="8:5" link="8-04,8-06"/>
     <station id="8-06" name="Площадь Ильича" line="8:6" link="8-05,8-07,10-05,10-07"/>
-    <station id="8-07" name="Марксистская" line="8:7" link="5-09,7-14,8-06,8-08"/>
-    <station id="8-08" name="Третьяковская" line="8:8" link="2-11,6-12,8-07,8-09"/>
-    <station id="8-09" name="Деловой центр" line="8:9" link="4-09,8-08"/>
-    <station id="8-10" name="Парк Победы" line="8:10" link="3-13,8-09"/>
+    <station id="8-07" name="Марксистская" line="8:7" link="5-09,8-06,6-12"/>
+    <!-- Третьяковская -->
+    <station id="8-09" name="Деловой центр" line="8:9" link="4-09,6-12"/>
+    <!-- Парк Победы -->
 
     <!-- https://ru.wikipedia.org/wiki/Серпуховско-Тимирязевская_линия -->
     <station id="9-01" name="Алтуфьево" line="9:1" link="9-02"/>
@@ -190,7 +206,7 @@
     <station id="9-11" name="Чеховская" line="9:11" link="9-10,9-12,7-11,2-09"/>
     <station id="9-12" name="Боровицкая" line="9:12" link="9-11,9-13,3-10,1-11"/>
     <station id="9-13" name="Полянка" line="9:13" link="9-12,9-14"/>
-    <station id="9-14" name="Серпуховская" line="9:14" link="5-10,9-13,9-15"/>
+    <station id="9-14" name="Серпуховская" line="9:14" link="2-12,9-13,9-15"/>
     <station id="9-15" name="Тульская" line="9:15" link="9-14,9-16"/>
     <station id="9-16" name="Нагатинская" line="9:16" link="9-15,9-17"/>
     <station id="9-17" name="Нагорная" line="9:17" link="9-16,9-18"/>
@@ -208,7 +224,7 @@
     <station id="10-02" name="Достоевская" line="10:2" link="10-01,10-03"/>
     <station id="10-03" name="Трубная" line="10:3" link="9-09,9-11,10-02,10-04"/>
     <station id="10-04" name="Сретенский бульвар" line="10:4" link="1-08,6-10,10-03,10-05"/>
-    <station id="10-05" name="Чкаловская" line="10:5" link="3-08,5-08,10-04,10-06"/>
+    <station id="10-05" name="Чкаловская" line="10:5" link="3-08,10-04,10-06"/>
     <station id="10-06" name="Римская" line="10:6" link="8-05,8-07,10-05,10-07"/>
     <station id="10-07" name="Крестьянская застава" line="10:7" link="7-15,10-06,10-08"/>
     <station id="10-08" name="Дубровка" line="10:8" link="10-07,10-09"/>
@@ -223,8 +239,8 @@
     <station id="10-17" name="Зябликово" line="10:17" link="10-16,2-20"/>
 
     <!-- https://ru.wikipedia.org/wiki/Каховская_линия -->
-    <station id="11-01" name="Каширская" line="11:1" link="2-15,11-02"/>
-    <station id="11-02" name="Варшавская" line="11:2" link="11-01,11-03"/>
+    <!-- Каширская -->
+    <station id="11-02" name="Варшавская" line="11:2" link="2-15,11-03"/>
     <station id="11-03" name="Каховская" line="11:3" link="11-02,9-19"/>
 
     <!-- https://ru.wikipedia.org/wiki/Бутовская линия -->
