@@ -1,4 +1,5 @@
 0.10
+ - Fix stations in multiple lines (GH#4).
  - Update copyright years.
 
 0.09 2023-12-19T13:12:33+01:00
